--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-fix": "eslint --fix src/"
   },
   "dependencies": {
+    "svg-captcha": "^1.3.12",
     "think-cache": "^1.0.0",
     "think-cache-file": "^1.0.8",
     "think-logger3": "^1.0.0",
